[gd_scene load_steps=4 format=3 uid="uid://bwmujbkx0jv8h"]

[ext_resource type="Script" path="res://src/scripts/ui/components/gallery_image.gd" id="1_mgd4a"]
[ext_resource type="Texture2D" uid="uid://ch55iben1ff3x" path="res://assets/icon.png" id="2_l2b1r"]
[ext_resource type="Texture2D" uid="uid://cu648p40sig4d" path="res://src/resources/assets/ui/theme_icons/times.svg" id="3_br76f"]

[node name="GalleryImage" type="BoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 20
script = ExtResource("1_mgd4a")

[node name="Text" type="LineEdit" parent="."]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Example"
expand_to_text_length = true
flat = true

[node name="Texture" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_l2b1r")
expand_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 2

[node name="Erase" type="Button" parent="AspectRatioContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
icon = ExtResource("3_br76f")
icon_alignment = 1
expand_icon = true

[connection signal="text_changed" from="Text" to="." method="_on_text_text_changed"]
[connection signal="pressed" from="AspectRatioContainer/Erase" to="." method="_on_erase_pressed"]
